--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello Git</h1>
-    <h2>I am master</h2>
+    <h2>I am masterr</h2>
     <h2>I am dev2</h2>
 </body>
 </html>
