--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Gitt</h1>
-    <h2>I am masterr</h2>
-    <h2>I am dev2</h2>
+    <h1>Hello Git</h1>
 </body>
 </html>
