--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello Git</h1>
     <h2>Hello master</h2>
-    <h2>Hello i am dev1</h3>
+    <h2>Hello i am dev1 , how are you</h3>
 </body>
 </html>
